# atelier

./: .env.example  .gitignore  CLAUDE.md  OPENROUTER_OAUTH.md  README.md  SCALING.md  docker-compose.yml
.github/workflows/: desktop.yml
backend/: Dockerfile  requirements.txt
backend/app/: auth.py  catalog.py  chat.py  cleanup.py  config.py  crypto.py  db.py  firewall.py  identity.py  main.py  memory.py  nim.py  notify.py  permissions.py  preview.py  scheduler.py  search.py  skills.py  telemetry.py  tips.py  tools_client.py  uploads.py  workspaces.py
desktop/: README.md  build.sh  ci_stage.py  run_local.py
desktop/pyinstaller/: atelier-backend.spec  atelier-tools.spec  serve.py
desktop/shell/: index.html
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Composer.tsx  DiffView.tsx  FileChip.tsx  FilePanel.tsx  FilePreviewModal.tsx  FirewallNotice.tsx  Markdown.tsx  MessageList.tsx  ModelPicker.tsx  PlanChip.tsx  ReflectChip.tsx  SearchBar.tsx  ServiceWorkerRegister.tsx  Sidebar.tsx  SkillsBar.tsx  TaskListPanel.tsx  ThemeToggle.tsx  TipsRotator.tsx  TomoseMark.tsx  ToolChip.tsx  UserQuestionChip.tsx  WorkspacePicker.tsx
frontend/lib/: api.ts  fsa.ts  sse.ts  types.ts
frontend/public/: sw.js  (+2 more)
guard/: Dockerfile  requirements.txt
preview/: Dockerfile
tools/: Dockerfile  probe_toolcalling.py  requirements.txt
(+18 files in other folders)
