[package]
name = "atelier"
version = "0.1.6"
edition = "2021"
description = "Atelier desktop app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
opt-level = "s"
lto = true
strip = true
